nodejs/versioned_docs/version-1.24/input.mdx
---
id: input
title: "Input"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

- [Text input](#text-input)
- [Checkboxes and radio buttons](#checkboxes-and-radio-buttons)
- [Select options](#select-options)
- [Mouse click](#mouse-click)
- [Type characters](#type-characters)
- [Keys and shortcuts](#keys-and-shortcuts)
- [Upload files](#upload-files)
- [Focus element](#focus-element)

## Text input

This is the easiest way to fill out the form fields. It focuses the element and triggers an `input` event with the entered text. It works for `<input>`, `<textarea>`, `[contenteditable]` and `<label>` associated with an input or textarea.

```js
// Text input
await page.locator('#name').fill('Peter');

// Date input
await page.locator('#date').fill('2020-02-02');

// Time input
await page.locator('#time').fill('13:15');

// Local datetime input
await page.locator('#local').fill('2020-03-02T05:15');

// Input through label
await page.locator('text=First Name').fill('Peter');
```

### API reference
- [locator.fill(value[, options])](./api/class-locator.mdx#locator-fill)
- [page.fill(selector, value[, options])](./api/class-page.mdx#page-fill)
- [frame.fill(selector, value[, options])](./api/class-frame.mdx#frame-fill)

<br/>

## Checkboxes and radio buttons

This is the easiest way to check and uncheck a checkbox or a radio button. This method can be used with `input[type=checkbox]`, `input[type=radio]`, `[role=checkbox]` or `label` associated with checkbox or radio button.

```js
// Check the checkbox
await page.locator('#agree').check();

// Assert the checked state
expect(await page.locator('#agree').isChecked()).toBeTruthy()

// Uncheck by input <label>.
await page.locator('#subscribe-label').uncheck();

// Select the radio button
await page.locator('text=XL').check();
```

### API reference
- [locator.check([options])](./api/class-locator.mdx#locator-check)
- [locator.isChecked([options])](./api/class-locator.mdx#locator-is-checked)
- [locator.uncheck([options])](./api/class-locator.mdx#locator-uncheck)
- [page.check(selector[, options])](./api/class-page.mdx#page-check)
- [page.isChecked(selector[, options])](./api/class-page.mdx#page-is-checked)
- [page.uncheck(selector[, options])](./api/class-page.mdx#page-uncheck)

<br/>

## Select options

Selects one or multiple options in the `<select>` element. You can specify option `value`, or `label` to select. Multiple options can be selected.

```js
// Single selection matching the value
await page.locator('select#colors').selectOption('blue');

// Single selection matching the label
await page.locator('select#colors').selectOption({ label: 'Blue' });

// Multiple selected items
await page.locator('select#colors').selectOption(['red', 'green', 'blue']);
```

### API reference
- [locator.selectOption(values[, options])](./api/class-locator.mdx#locator-select-option)
- [page.selectOption(selector, values[, options])](./api/class-page.mdx#page-select-option)
- [frame.selectOption(selector, values[, options])](./api/class-frame.mdx#frame-select-option)

<br/>

## Mouse click

Performs a simple human click.

```js
// Generic click
await page.locator('button#submit').click();

// Double click
await page.locator('#item').dblclick();

// Right click
await page.locator('#item').click({ button: 'right' });

// Shift + click
await page.locator('#item').click({ modifiers: ['Shift'] });

// Hover over element
await page.locator('#item').hover();

// Click the top left corner
await page.locator('#item').click({ position: { x: 0, y: 0} });
```

Under the hood, this and other pointer-related methods:
- wait for element with given selector to be in DOM
- wait for it to become displayed, i.e. not empty, no `display:none`, no `visibility:hidden`
- wait for it to stop moving, for example, until css transition finishes
- scroll the element into view
- wait for it to receive pointer events at the action point, for example, waits until element becomes non-obscured by other elements
- retry if the element is detached during any of the above checks

#### Forcing the click

Sometimes, apps use non-trivial logic where hovering the element overlays it with another element that intercepts the click. This behavior is indistinguishable from a bug where element gets covered and the click is dispatched elsewhere. If you know this is taking place, you can bypass the [actionability](./actionability.mdx) checks and force the click:

```js
await page.locator('button#submit').click({ force: true });
```

#### Programmatic click

If you are not interested in testing your app under the real conditions and want to simulate the click by any means possible, you can trigger the [`HTMLElement.click()`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click) behavior via simply dispatching a click event on the element:

```js
await page.locator('button#submit').dispatchEvent('click');
```

### API reference
- [locator.click([options])](./api/class-locator.mdx#locator-click)
- [page.click(selector[, options])](./api/class-page.mdx#page-click)
- [frame.click(selector[, options])](./api/class-frame.mdx#frame-click)
- [locator.dblclick([options])](./api/class-locator.mdx#locator-dblclick)
- [page.dblclick(selector[, options])](./api/class-page.mdx#page-dblclick)
- [frame.dblclick(selector[, options])](./api/class-frame.mdx#frame-dblclick)
- [locator.hover([options])](./api/class-locator.mdx#locator-hover)
- [page.hover(selector[, options])](./api/class-page.mdx#page-hover)
- [frame.hover(selector[, options])](./api/class-frame.mdx#frame-hover)
- [locator.dispatchEvent(type[, eventInit, options])](./api/class-locator.mdx#locator-dispatch-event)
- [page.dispatchEvent(selector, type[, eventInit, options])](./api/class-page.mdx#page-dispatch-event)
- [frame.dispatchEvent(selector, type[, eventInit, options])](./api/class-frame.mdx#frame-dispatch-event)

<br/>

## Type characters

Type into the field character by character, as if it was a user with a real keyboard.

```js
// Type character by character
await page.locator('#area').type('Hello World!');
```

This method will emit all the necessary keyboard events, with all the `keydown`, `keyup`, `keypress` events in place. You can even specify the optional `delay` between the key presses to simulate real user behavior.

:::note
Most of the time, [page.fill(selector, value[, options])](./api/class-page.mdx#page-fill) will just work. You only need to type characters if there is special keyboard handling on the page.
:::

### API reference
- [locator.type(text[, options])](./api/class-locator.mdx#locator-type)
- [page.type(selector, text[, options])](./api/class-page.mdx#page-type)
- [frame.type(selector, text[, options])](./api/class-frame.mdx#frame-type)
- [keyboard.type(text[, options])](./api/class-keyboard.mdx#keyboard-type)

<br/>

## Keys and shortcuts

```js
// Hit Enter
await page.locator('#submit').press('Enter');

// Dispatch Control+Right
await page.locator('#name').press('Control+ArrowRight');

// Press $ sign on keyboard
await page.locator('#value').press('$');
```

This method focuses the selected element and produces a single keystroke. It accepts the logical key names that are emitted in the [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) property of the keyboard events:

```
Backquote, Minus, Equal, Backslash, Backspace, Tab, Delete, Escape,
ArrowDown, End, Enter, Home, Insert, PageDown, PageUp, ArrowRight,
ArrowUp, F1 - F12, Digit0 - Digit9, KeyA - KeyZ, etc.
```

- You can alternatively specify a single character you'd like to produce such as `"a"` or `"#"`.
- Following modification shortcuts are also supported: `Shift, Control, Alt, Meta`.

Simple version produces a single character. This character is case-sensitive, so `"a"` and `"A"` will produce different results.

```js
// <input id=name>
await page.locator('#name').press('Shift+A');

// <input id=name>
await page.locator('#name').press('Shift+ArrowLeft');
```

Shortcuts such as `"Control+o"` or `"Control+Shift+T"` are supported as well. When specified with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

Note that you still need to specify the capital `A` in `Shift-A` to produce the capital character. `Shift-a` produces a lower-case one as if you had the `CapsLock` toggled.

### API reference
- [locator.press(key[, options])](./api/class-locator.mdx#locator-press)
- [page.press(selector, key[, options])](./api/class-page.mdx#page-press)
- [frame.press(selector, key[, options])](./api/class-frame.mdx#frame-press)
- [keyboard.press(key[, options])](./api/class-keyboard.mdx#keyboard-press)

<br/>

## Upload files

You can select input files for upload using the [page.setInputFiles(selector, files[, options])](./api/class-page.mdx#page-set-input-files) method. It expects first argument to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input) with the type `"file"`. Multiple files can be passed in the array. If some of the file paths are relative, they are resolved relative to the current working directory. Empty array clears the selected files.

```js
// Select one file
await page.locator('input#upload').setInputFiles('myfile.pdf');

// Select multiple files
await page.locator('input#upload').setInputFiles(['file1.txt', 'file2.txt']);

// Remove all the selected files
await page.locator('input#upload').setInputFiles([]);

// Upload buffer from memory
await page.locator('input#upload').setInputFiles({
  name: 'file.txt',
  mimeType: 'text/plain',
  buffer: Buffer.from('this is test')
});
```

If you don't have input element in hand (it is created dynamically), you can handle the [page.on('filechooser')](./api/class-page.mdx#page-event-file-chooser) event or use a corresponding waiting method upon your action:

```js
// Note that Promise.all prevents a race condition
// between clicking and waiting for the file chooser.
const [fileChooser] = await Promise.all([
  // It is important to call waitForEvent before click to set up waiting.
  page.waitForEvent('filechooser'),
  page.locator('upload').click(),
]);
await fileChooser.setFiles('myfile.pdf');
```

### API reference
- [FileChooser]
- [locator.setInputFiles(files[, options])](./api/class-locator.mdx#locator-set-input-files)
- [page.setInputFiles(selector, files[, options])](./api/class-page.mdx#page-set-input-files)
- [frame.setInputFiles(selector, files[, options])](./api/class-frame.mdx#frame-set-input-files)

<br/>

## Focus element

For the dynamic pages that handle focus events, you can focus the given element.

```js
await page.locator('input#name').focus();
```

### API reference
- [locator.focus([options])](./api/class-locator.mdx#locator-focus)
- [page.focus(selector[, options])](./api/class-page.mdx#page-focus)
- [frame.focus(selector[, options])](./api/class-frame.mdx#frame-focus)

<br/>

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
